--- a/webapp/src/main/webapp/html/jQuerySerializeObject_Test2.html
+++ b/webapp/src/main/webapp/html/jQuerySerializeObject_Test2.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>jQuery Serialize Object</title>
-<script src="./js/jquery-1.11.2.min.js"></script>
-<script src="./js/jquery.serialize-object.min.js"></script>
+<script src="../js/jquery-1.11.2.min.js"></script>
+<script src="../js/jquery.serialize-object.min.js"></script>
 
 </head>
 
